--- a/Lab_One_Oscar_Reviews/app/src/main/res/values/strings.xml
+++ b/Lab_One_Oscar_Reviews/app/src/main/res/values/strings.xml
@@ -8,9 +8,9 @@
     <string name="review_hint">Enter review here</string>
     <string name="nominee_hint">Enter nominee here</string>
 
-    <string name="radio_best_picture" value ="film">Best Picture</string>
-    <string name="radio_best_actor" value ="actor">Best Actor</string>
-    <string name="radio_best_actress" value ="actress">Best Actress</string>
-    <string name="radio_film_editing" value ="editing">Film Editing</string>
-    <string name="radio_visual_effects" value ="effects">Visual Effects</string>
+    <string name="radio_best_picture" >Best Picture</string>
+    <string name="radio_best_actor" >Best Actor</string>
+    <string name="radio_best_actress" >Best Actress</string>
+    <string name="radio_film_editing" >Film Editing</string>
+    <string name="radio_visual_effects" >Visual Effects</string>
 </resources>
