--- a/TodoOrNot/app/src/main/res/values/strings.xml
+++ b/TodoOrNot/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">TodoOrNot</string>
-    <string name="select_message">select title</string>
+    <string name="spinner_prompt">Todo Title</string>
 </resources>
