--- a/TodoOrNot/app/src/main/res/values/strings.xml
+++ b/TodoOrNot/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
 <resources>
     <string name="app_name">TodoOrNot</string>
     <string name="spinner_prompt">Todo Title</string>
+    <string name="check_completed">Completed</string>
+    <string name="btn_save">Save</string>
+    <string name="btn_delete">Delete</string>
+
 
     <string name="menu_prefs">Preferences</string>
     <string name="menu_main_screen">Todo Main</string>
