--- a/TodoOrNot/app/src/main/res/values/strings.xml
+++ b/TodoOrNot/app/src/main/res/values/strings.xml
@@ -4,8 +4,10 @@
     <string name="check_completed">Completed</string>
     <string name="btn_save">Save</string>
     <string name="btn_delete">Delete</string>
+    <string name="btn_archive">Archive</string>
 
 
     <string name="menu_prefs">Preferences</string>
     <string name="menu_main_screen">Todo Main</string>
+    <string name="menu_view_archived">View Archived</string>
 </resources>
